--- a/project/projecy-p1.html
+++ b/project/projecy-p1.html
@@ -1,46 +1,53 @@
-<!doctype html>
- <html>
- <head>
-   <title>Indo-Canadian Food House</title>
- </head>
- <link rel="stylesheet" href="p1css.css" />
- <body>
- <nav class="weh">
-   <h1>Welcome to Indo-Canadian Food house</h1>
-   </nav>
-   
-        <div class="beta">
-		
-         <a href="Z:\project website\project\canadian food homepage\cfhp.html"><p class="anti">Canadian food</p></a>
-        <div>
-        <div class="delta">
-	
-         <a href="....."><p class="bravo">Indian Food</p></a> 
-        </div>
-  <footer>
-  <div class="foot">
-  
-  <div>
-  <div class="content">
-  <nav class="footer">
-  <a href="#sajkdc" id="a">Home</a>
-  <a href="#sajkdc" id="a">How We Can Help You?</a>
-  <a href="#menu"  id="b"> Contact Us</a>
-  <a href="#services"  id="c"> Legals</a>
-  <a href="#contact"  id="d">Reservations</a>
-  <a href="#about" id="e"> Corporate</a>
-</nav>
-<hr>
-<p id="parafooter" style="text-align:center">Pictures and images on this website are for illustration purposes only. 
-No qualities or characteristics of the products depicted herein could be inferred from the relevant pictures. 
-<br>Certain activities undertaken by Indo-Canadian Food Hut may be licensed under US Patent No. 6,200,500,600.
- Copyright ©2018 Indo-Canadian Food Hut. - All Rights Reserved<br>
- 
- We guarantee every transaction is 100% secure
- <ul id="menu">
-<li> <img src="Z:\project website\project\amex.png" /></li>
-<li> <img src="Z:\project website\project\paypal.png" /></li>
- <li><img src="Z:\project website\project\visa.png" /></li>
-  <li><img src="Z:\project website\project\discover.png" /></li>
- </ul></p>
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Indo-Canadian Food House</title>
+		<link rel="stylesheet" href="p1css.css" />
+	</head>
+	<body>
+		<div class="container">   
+			<nav class="weh">
+				<h1>Welcome to Indo-Canadian Food house</h1>
+			</nav>
+			<div class="beta">
+				<a href="Z:\project\canadian food homepage\cfhp.html">
+					<img class="primary-image" src="Z:\project\indlogo.png" />
+				</a>
+			</div>
+			<div class="delta">
+				<a href="Z:\project\indian food\indianfood.html">
+					<img class="primary-image" src="Z:\project\canlogo.png" />
+				</a> 
+			</div>
+			<div class="Catering" >
+			
+			
+			
+			
+			</div>
+			<div class="footer">
+				<nav class="footer-nav">
+					<a href="#sajkdc" id="a">Home</a>
+					<a href="#sajkdc" id="a">How We Can Help You?</a>
+					<a href="#menu"  id="b"> Contact Us</a>
+					<a href="#services"  id="c"> Legals</a>
+					<a href="#contact"  id="d">Reservations</a>
+					<a href="#about" id="e"> Corporate</a>
+				</nav>
+				<hr>
+				<p id="parafooter" style="text-align:center">Pictures and images on this website are for illustration purposes only. 
+					No qualities or characteristics of the products depicted herein could be inferred from the relevant pictures. 
+					<br>Certain activities undertaken by Indo-Canadian Food Hut may be licensed under US Patent No. 6,200,500,600.
+					Copyright ©2018 Indo-Canadian Food Hut. - All Rights Reserved<br> 
+					We guarantee every transaction is 100% secure
+					<ul id="menu">
+						<li> <img src="Z:\project\amex.png" /></li>
+						<li> <img src="Z:\project\paypal.png" /></li>
+						<li><img src="Z:\project\visa.png" /></li>
+						<li><img src="Z:\project\discover.png" /></li>
+					</ul>
+				</p>
+			</div>
+		</div>
+	 </body>
+ </html>
