--- a/final_food_project/feedback.html
+++ b/final_food_project/feedback.html
@@ -46,7 +46,7 @@
   </br>
   
   
-   <button input type="submit" class="button" >Submit</button>
+   <button input type="submit" class="button" onclick="return validateform1()">Submit</button>
     
 	</br></br>
 	
