--- a/final_food_project/registration.html
+++ b/final_food_project/registration.html
@@ -55,7 +55,7 @@
   </br></br>
   <label for="contact" class="text">Contact</label></br>
  
-  <input type="tel" class="txtbx" name="contact" name="quantity" min="1" max="10" value=""/>
+  <input type="tel" class="txtbx" name="contact" name="quantity" min="1" max="10" value="" required/>
   </br></br>
   </br>
   
