--- a/final_food_project/registration.html
+++ b/final_food_project/registration.html
@@ -50,17 +50,17 @@
   
     </br></br>
   <label for="rpass" class="text">Re-Password</label></br>
-   <input type="password" class="txtbx" name="password" algin="center" valign="middle" required>
+   <input type="password" class="txtbx" name="rpassword" algin="center" valign="middle" required>
   
   </br></br>
   <label for="contact" class="text">Contact</label></br>
  
-  <input type="tel" class="txtbx" name="contact" name="quantity" min="1" max="10" value="" required/>
+  <input type="tel" class="txtbx" name="contact" name="quantity" minlength="1" maxlength="10" value="" required/>
   </br></br>
   </br>
   
   
-   <button input type="submit" class="button" >Submit</button>
+   <button input type="submit" class="button" onclick="return validateform4()">Submit</button>
     
 	</br></br>
 	
