--- a/project/Indianfood.html
+++ b/project/Indianfood.html
@@ -2,17 +2,16 @@
 <html>
   <head>
     <title>Indian Food</title>
-    <meta name="viewport" content="width=device-width, initial-scale=0">
     <link href="indianfoodcss.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container" >
 	 <video autoplay muted loop id="myVideo">
-         <source src="Z:\project\indian food\food.mp4" type="video/mp4">
+         <source src="Z:\project\indfood.mp4" type="video/mp4">
      </video>
      <nav class="navbar">
-       <a href="Z:\project\projecy-p1.html" id="a">Home</a>
-       <a href="#menu"  id="b"> Menu</a>
+       <a href="Index.html" id="a">Home</a>
+       <a href="menu.html"  id="b"> Menu</a>
        <a href="#services"  id="c">  Services</a>
        <a href="#contact"  id="d">Reservations</a>
        <a href="#about" id="e"> About</a>
