--- a/project/cfhp.html
+++ b/project/cfhp.html
@@ -14,11 +14,11 @@
 
 <nav class="sidebar">
 
-  <a href="Z:\project\projecy-p1.html" id="a">Home</a>
-  <a href="#menu"  id="b"> Menu</a>
-  <a href="#services"  id="c">  Services</a>
-  <a href="#contact"  id="d">Reservations</a>
-  <a href="#about" id="e"> About</a>
+  <a href="index.html" id="a">Home</a>
+  <a href="menu.html"  id="b"> Menu</a>
+  <a href="party.html"  id="c">  Services</a>
+  <a href="party.html"  id="d">Reservations</a>
+  <a href="aboutjn.html" id="e"> About</a>
 </nav>
 
 <!--sidebar end -->
@@ -26,7 +26,7 @@
 
     <img id="imgmn" src="Z:\project\cana1.jpg" />
 	
-	<h1 id="hm1">MARINATED LAMB CHOPS</h1>
+	<h1 id="hm2">MARINATED LAMB CHOPS</h1>
 	<p id="m1" >Marinated in Greek Yogurt with spicess and herbs, the grilled against an open flame.</br> Served over turmeric rice, hand curved and marinated.</p>
 	
    </div>
@@ -40,12 +40,12 @@
 	   <h1 id="hm3">AMERICAN CUPCAKE</h1>
 	<p id="m3" >Cupcakes are the perfect way to celebrate any occasion, be it a birthday,</br> graduation or even just a rainy day. ... Whisk together flour, baking powder and salt; set aside. ..</p>
 	</div>
-	<div
+	<div>
    <div class="cobra" >
   <ul>
-  <a href="https://www.facebook.com/FoodLoversIndia/" id="f" ><img id="imgfb" src="Z:\project\canadian food homepage\facebook.png" /></a>
-  <a href="https://twitter.com/hashtag/indianfood?lang=en" id="g" ><img id="imgfb" src="Z:\project\canadian food homepage\twitter.png" /></a>
- <a href="https://www.instagram.com/explore/tags/indianfood/?hl=en" id="h" ><img id="imgfb" src="Z:\project\canadian food homepage\instagram.png" /></a>
+  <a href="https://www.facebook.com/FoodLoversIndia/" id="f" ><img id="imgfb" src="facebook.png" /></a>
+  <a href="https://twitter.com/hashtag/indianfood?lang=en" id="g" ><img id="imgfb" src="twitter.png" /></a>
+ <a href="https://www.instagram.com/explore/tags/indianfood/?hl=en" id="h" ><img id="imgfb" src="instagram.png" /></a>
   </ul>
    </div>
    </div>
