--- a/project/projecy-p1.html
+++ b/project/projecy-p1.html
@@ -10,13 +10,13 @@
 				<h1>Welcome to Indo-Canadian Food house</h1>
 			</nav>
 			<div class="beta">
-				<a href="Z:\project\canadian food homepage\cfhp.html">
-					<img class="primary-image" src="Z:\project\indlogo.png" />
+				<a href="indianfood.html">
+					<img class="primary-image" src="indlogo.png" />
 				</a>
 			</div>
 			<div class="delta">
-				<a href="Z:\project\indian food\indianfood.html">
-					<img class="primary-image" src="Z:\project\canlogo.png" />
+				<a href="cfhp.html">
+					<img class="primary-image" src="canlogo.png" />
 				</a> 
 			</div>
 			<div class="Catering" >
@@ -27,12 +27,13 @@
 			</div>
 			<div class="footer">
 				<nav class="footer-nav">
-					<a href="#sajkdc" id="a">Home</a>
+					<a href="projecy-p1.html" id="a">Home</a>
 					<a href="#sajkdc" id="a">How We Can Help You?</a>
-					<a href="#menu"  id="b"> Contact Us</a>
-					<a href="#services"  id="c"> Legals</a>
-					<a href="#contact"  id="d">Reservations</a>
-					<a href="#about" id="e"> Corporate</a>
+					<a href="party.html"  id="d">Reservations</a>
+					<a href="party.html"  id="c"> Catering</a>
+					<a href="aboutus.html"  id="b"> Contact Us</a>
+					<a href="feedback.html" id="e">Feedback</a>
+					<a href="login_page.html" id="e"> A Member?</a>
 				</nav>
 				<hr>
 				<p id="parafooter" style="text-align:center">Pictures and images on this website are for illustration purposes only. 
@@ -41,10 +42,10 @@
 					Copyright ©2018 Indo-Canadian Food Hut. - All Rights Reserved<br> 
 					We guarantee every transaction is 100% secure
 					<ul id="menu">
-						<li> <img src="Z:\project\amex.png" /></li>
-						<li> <img src="Z:\project\paypal.png" /></li>
-						<li><img src="Z:\project\visa.png" /></li>
-						<li><img src="Z:\project\discover.png" /></li>
+						<li> <img src="amex.png" /></li>
+						<li> <img src="paypal.png" /></li>
+						<li><img src="visa.png" /></li>
+						<li><img src="discover.png" /></li>
 					</ul>
 				</p>
 			</div>
