--- a/project/cfhp.html
+++ b/project/cfhp.html
@@ -24,19 +24,19 @@
 <!--sidebar end -->
    <div class="menu-1">
 
-    <img id="imgmn" src="Z:\project\cana1.jpg" />
+    <img id="imgmn" src="cana1.jpg" />
 	
 	<h1 id="hm2">MARINATED LAMB CHOPS</h1>
 	<p id="m1" >Marinated in Greek Yogurt with spicess and herbs, the grilled against an open flame.</br> Served over turmeric rice, hand curved and marinated.</p>
 	
    </div>
    <div class="menu-2">
-    <img id="imgmn2" src="Z:\project\cana2.jpg" />
+    <img id="imgmn2" src="cana2.jpg" />
    <h1 id="hm2">CHICKEN POUTINE</h1>
 	<p id="m2" >The high-calorie concoction -- a messy combination of fries, gravy and</br>cheddar cheese curds -- is not for the faint of heart, or for that matter,</br> those seeking to protect their heart.</p>
     </div>
     <div class="menu-3">
-	  <img id="imgmn" src="Z:\project\cana3.jpg" />
+	  <img id="imgmn" src="cana3.jpg" />
 	   <h1 id="hm3">AMERICAN CUPCAKE</h1>
 	<p id="m3" >Cupcakes are the perfect way to celebrate any occasion, be it a birthday,</br> graduation or even just a rainy day. ... Whisk together flour, baking powder and salt; set aside. ..</p>
 	</div>
