--- a/menu.html
+++ b/menu.html
@@ -12,25 +12,25 @@
 			
 			<div class="masdiv">
 		    <div class="div1" >
-			 <a href="...." ><img src="break.jpg" id="img2" ></a>
+			 <a href="FoodFood.html" ><img src="break.jpg" id="img2" ></a>
 			
 			</div>
 			<div class="div2">
-		     <a href="...." ><img src="lunch.png" id="img2" ></a>
+		     <a href="FoodFood.html" ><img src="lunch.png" id="img2" ></a>
 			
 			</div>
 			<div class="div3" >
-			 <a href="..." ><img src="din.jpg" id="img2" ></a>
+			 <a href="FoodFood.html" ><img src="din.jpg" id="img2" ></a>
 			</div>
 			</div>
 			<footer>
 			<div class="footer">
 				<nav class="footer-nav">
-					<a href="projecy-p1.html" id="a">Home</a>
+					<a href="index.html" id="a">Home</a>
 					<a href="#sajkdc" id="a">How We Can Help You?</a>
-					<a href="#menu"  id="b"> Contact Us</a>
+					<a href="aboutus.html"  id="b"> Contact Us</a>
 					<a href="#services"  id="c"> Legals</a>
-					<a href="#contact"  id="d">Reservations</a>
+					<a href="party.html"  id="d">Reservations</a>
 					<a href="#about" id="e"> Corporate</a>
 				</nav>
 				<hr>
