--- a/Indianfood.html
+++ b/Indianfood.html
@@ -2,20 +2,19 @@
 <html>
   <head>
     <title>Indian Food</title>
-    <meta name="viewport" content="width=device-width, initial-scale=0">
     <link href="indianfoodcss.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container" >
 	 <video autoplay muted loop id="myVideo">
-         <source src="Z:\project\indian food\food.mp4" type="video/mp4">
+         <source src="indfood.mp4" type="video/mp4">
      </video>
      <nav class="navbar">
-       <a href="Z:\project\projecy-p1.html" id="a">Home</a>
-       <a href="#menu"  id="b"> Menu</a>
-       <a href="#services"  id="c">  Services</a>
-       <a href="#contact"  id="d">Reservations</a>
-       <a href="#about" id="e"> About</a>
+       <a href="Index.html" id="a">Home</a>
+       <a href="menu.html"  id="b"> Menu</a>
+       <a href="party.html"  id="c">  Services</a>
+       <a href="party.html"  id="d">Reservations</a>
+       <a href="aboutjn.html" id="e"> About</a>
      </nav>
      <div class="content"><h1 id="h1">THE RESTAURANT</h1><p  class="p1">The Eddy is a neighborhood restaurant that combines welcoming and <br>
       friendly hospitality with creative, market-driven food. Executive Chef Jeremy Salamon’s menu incorporates Indian and Persian influences and at the same time,<br>
