--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <head><title>Contact|us</title>
-<link href="Z:\project\aboutuscss.css" rel="stylesheet"/>
+<link href="aboutuscss.css" rel="stylesheet"/>
 <body>
 <img src="abo1.jpg" id="body" />
 <nav class="sidebar">
   <a href="index.html" id="a" >Home</a>
-  <a href="#menu"  id="b"> Menu</a>
-  <a href="#services"  id="c">  Services</a>
-  <a href="#contact"  id="d">Reservations</a>
+  <a href="menu.html"  id="b"> Menu</a>
+  <a href="party.html"  id="c">  Services</a>
+  <a href="aboutus.html"  id="d">Reservations</a>
 </nav>
 <div class="about">
 <h1 id="res">RESTAURANT</h1>
