--- a/project/Indianfood.html
+++ b/project/Indianfood.html
@@ -13,7 +13,7 @@
        <a href="Index.html" id="a">Home</a>
        <a href="menu.html"  id="b"> Menu</a>
        <a href="party.html"  id="c">  Services</a>
-       <a href="aboutus.html"  id="d">Reservations</a>
+       <a href="party.html"  id="d">Reservations</a>
        <a href="aboutjn.html" id="e"> About</a>
      </nav>
      <div class="content"><h1 id="h1">THE RESTAURANT</h1><p  class="p1">The Eddy is a neighborhood restaurant that combines welcoming and <br>
